deploy/k8s/test/06-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  namespace: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      serviceAccountName: worker
      containers:
        - name: worker
          image: 390402574827.dkr.ecr.ap-northeast-1.amazonaws.com/dpacs/worker:<tag>
          imagePullPolicy: IfNotPresent
          env:
            - name: NODE_ENV
              value: production

            - name: AWS_REGION
              valueFrom:
                configMapKeyRef:
                  name: app-config
                  key: AWS_REGION

            - name: SQS_QUEUE_URL
              valueFrom:
                configMapKeyRef:
                  name: app-config
                  key: SQS_QUEUE_URL

            - name: DATABASE_URL
              valueFrom:
                secretKeyRef:
                  name: worker-env
                  key: DATABASE_URL

            - name: DB_CONNECTION_TIMEOUT_MS
              value: "30000"

            - name: DB_IDLE_TIMEOUT_MS
              value: "30000"

            - name: DB_POOL_MAX
              value: "5"
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
              ephemeral-storage: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
              ephemeral-storage: "1Gi"
