deploy/k8s/test/08-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dpacs
  namespace: test
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
    alb.ingress.kubernetes.io/success-codes: "200-399"
    alb.ingress.kubernetes.io/tags: Environment=test,Project=DPACS
    alb.ingress.kubernetes.io/transforms.access: >
      [
        {
          "type": "url-rewrite",
          "urlRewriteConfig": {
            "rewrites": [
              {
                "regex": "^\\/access(?:\\/(.*))?$",
                "replace": "/$1"
              }
            ]
          }
        }
      ]

spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /access
            pathType: Prefix
            backend:
              service:
                name: access
                port:
                  number: 80

          - path: /
            pathType: Prefix
            backend:
              service:
                name: report
                port:
                  number: 80
